GNOME Bugzilla – Bug 710486
Scrolling shouldn't fill the old last row
Last modified: 2014-04-06 18:24:53 UTC
Created attachment 257680 [details] Screenshot Execute echo -e '\e['$LINES'H\e[43mBottom row'; sleep 100 When the row containig the text "Bottom row" gets scrolled up by 1, it is filled with the background color in vte, but not in xterm. See screenshot.
Created attachment 257681 [details] [review] Fix
Fixed on vte-0-36.